# open5gs-EIF

./: README.md  fix_handler.py  mock_server.py  open5gs-EIF  patch_message.sh  patch_notif.sh  patch_notif2.sh  patch_revert.sh  test-curl.sh
.github/workflows/: meson-ci.yml
configs/logrotate/: open5gs.in
configs/newsyslog/: open5gs.conf.in
configs/open5gs/: eif.yaml.in  meson.build
configs/systemd/: meson.build  open5gs-eifd.service.in
debian/: control  open5gs-eif.install
docker/: README.md  docker-compose.yml
docker/package/: Dockerfile
lib/sbi/: message.c  message.h  ogs-sbi.h  types.c  types.h
lib/sbi/openapi/: CMakeLists.txt  README.md  meson.build
lib/sbi/openapi/.openapi-generator/: FILES
lib/sbi/openapi/api/: AMF3GPPAccessRegistrationDocumentAPI.c  AMF3GPPAccessRegistrationDocumentAPI.h  AMF3GppAccessRegistrationInfoRetrievalAPI.c  AMF3GppAccessRegistrationInfoRetrievalAPI.h  AMFGroupSubscriptionInfoDocumentAPI.c  AMFGroupSubscriptionInfoDocumentAPI.h  AMFNon3GPPAccessRegistrationDocumentAPI.c  AMFNon3GPPAccessRegistrationDocumentAPI.h  AMFNon3GPPAccessRegistrationInfoRetrievalAPI.c  AMFNon3GPPAccessRegistrationInfoRetrievalAPI.h  AMFRegistrationFor3GPPAccessAPI.c  AMFRegistrationFor3GPPAccessAPI.h  AMFRegistrationForNon3GPPAccessAPI.c  AMFRegistrationForNon3GPPAccessAPI.h  AccessAndMobilityDataAPI.c  (+439 more)
misc/: ipv6-netconf.sh  netconf.sh
src/: meson.build
src/eif/: app.c  context.c  context.h  eif-sm.c  eif-sm.h  event.c  event.h  init.c  meson.build  neif-handler.c  neif-handler.h  nnrf-handler.c  nnrf-handler.h  sbi-path.c  sbi-path.h
(+2615 files in other folders)
